Modification du z-index de toutes les sections pour que le header en version mobile soit toujours en fixed

--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -5,7 +5,7 @@
     width: 100vw;
     height: auto;
     background-color: $black-color;
-    z-index: 2;
+    z-index: 1;
 }
 
 .about__image {
