--- a/src/assets/styles/experiences.scss
+++ b/src/assets/styles/experiences.scss
@@ -7,7 +7,7 @@
     padding-bottom: 110px;
     background-color: $black-color;
     color: $black-color;
-    z-index: 2;
+    z-index: 1;
 }
 
 .titre-travail-exp {
