--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -98,6 +98,7 @@
             position: fixed;
             width: 100%;
             height: 55px;
+            z-index: 999999;
             background-color: $black-color;
         }
         &__name {
