--- a/src/assets/styles/skills.scss
+++ b/src/assets/styles/skills.scss
@@ -5,7 +5,7 @@
     width: 100vw;
     height: 800px;
     background-color: $black-color;
-    z-index: 2;
+    z-index: 1;
     overflow: hidden;
     text-align: center;
 
